--- a/Frontend/CSS_Files/style.css
+++ b/Frontend/CSS_Files/style.css
@@ -54,6 +54,7 @@ footer{
   background-color: white;
   padding-right: 80px;
   margin-right: 41.5%;
+  font-weight: bold;
 }
 #search_bar{
   margin-right: 40px;
